[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerSM.gd" type="Script" id=3]
[ext_resource path="res://Player/Powers/DoubleJump/DoubleJump.gd" type="Script" id=4]
[ext_resource path="res://Player/Player-texture.png" type="Texture" id=5]
[ext_resource path="res://shader.shader" type="Shader" id=6]
[ext_resource path="res://Effects/Particles/RunParticle.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/Particles/FallParticle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Effects/Particles/WallSlidingParticle.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/Camera/Camera2D.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/Powers/Dash/Dash.gd" type="Script" id=11]
[ext_resource path="res://Player/Powers/SlowMo/SlowMotion.gd" type="Script" id=12]
[ext_resource path="res://Sounds/jump.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/Run.wav" type="AudioStream" id=14]
[ext_resource path="res://Player/LightsOut.gd" type="Script" id=15]
[ext_resource path="res://Sounds/dash.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/slowmo.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds/lightsout.wav" type="AudioStream" id=18]
[ext_resource path="res://Sounds/undo.wav" type="AudioStream" id=19]
[ext_resource path="res://Player/PlayerAnimation.tscn" type="PackedScene" id=20]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/glow_color = Color( 0.898039, 1, 0, 1 )
shader_param/emission_texture = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.61029, 4.12868 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.07011, 4.0657 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
rotation = 0.00723766
texture = ExtResource( 1 )
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.62939e-06, 3.93726 )
shape = SubResource( 2 )

[node name="AnimationPlayer" parent="." instance=ExtResource( 20 )]

[node name="Camera2D" parent="." instance=ExtResource( 10 )]

[node name="PlayerSM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="SlowMotion" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="Cooldown" type="Timer" parent="SlowMotion"]
wait_time = 20.0
one_shot = true

[node name="SlowMo" type="AudioStreamPlayer" parent="SlowMotion"]
stream = ExtResource( 17 )
volume_db = -10.0
pitch_scale = 2.0

[node name="Duration" type="Timer" parent="SlowMotion"]
wait_time = 2.5
one_shot = true

[node name="Dash" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="DashTimer" type="Timer" parent="Dash"]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="Dash"]
wait_time = 0.5
one_shot = true

[node name="GhostTimer" type="Timer" parent="Dash"]
wait_time = 0.01

[node name="DashAudio" type="AudioStreamPlayer" parent="Dash"]
stream = ExtResource( 16 )
volume_db = -5.0
pitch_scale = 2.0

[node name="DoubleJump" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="LightsOut" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="Cooldown" type="Timer" parent="LightsOut"]
wait_time = 30.0
one_shot = true

[node name="Duration" type="Timer" parent="LightsOut"]
wait_time = 3.0
one_shot = true

[node name="LightsOut" type="AudioStreamPlayer" parent="LightsOut"]
stream = ExtResource( 18 )
pitch_scale = 1.5

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallCast" type="Node2D" parent="."]

[node name="Right" type="Node2D" parent="WallCast"]

[node name="RayCast" type="RayCast2D" parent="WallCast/Right"]
position = Vector2( 4.33954, 0.450245 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="RayCast2" type="RayCast2D" parent="WallCast/Right"]
position = Vector2( 4.44018, 6.20674 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="Left" type="Node2D" parent="WallCast"]

[node name="RayCast" type="RayCast2D" parent="WallCast/Left"]
position = Vector2( -4.42166, 0.166855 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="RayCast2" type="RayCast2D" parent="WallCast/Left"]
position = Vector2( -4.45608, 6.02399 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="RunParticlePivot" type="Position2D" parent="."]
position = Vector2( 0, 7.95325 )

[node name="RunParticle" parent="RunParticlePivot" instance=ExtResource( 7 )]
position = Vector2( -4.64596, -3.8147e-06 )

[node name="WallSlidingPivot" type="Position2D" parent="."]
position = Vector2( -0.00936508, -5.98464 )

[node name="WallSlidingParticle" parent="WallSlidingPivot" instance=ExtResource( 9 )]
position = Vector2( -4.26118, -0.477147 )

[node name="FallParticle" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 7.91287 )

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2( 0, 2.68036 )
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 3 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -3.0

[node name="Run" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -15.0
pitch_scale = 1.5

[node name="Undo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
[connection signal="timeout" from="SlowMotion/Cooldown" to="SlowMotion" method="_on_Cooldown_timeout"]
[connection signal="timeout" from="Dash/DashTimer" to="Dash" method="_on_DashTimer_timeout"]
[connection signal="timeout" from="Dash/DashCooldown" to="Dash" method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="Dash/GhostTimer" to="Dash" method="_on_GhostTimer_timeout"]
[connection signal="timeout" from="LightsOut/Cooldown" to="LightsOut" method="_on_Cooldown_timeout"]
[connection signal="timeout" from="LightsOut/Duration" to="LightsOut" method="_on_Duration_timeout"]
